--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,7 +76,7 @@ body {
     align-self: start;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
   }
@@ -114,7 +114,7 @@ body {
   .About .icons .Logo {
     width: 50%;
     margin-bottom: 3rem;
-    border-radius: 10%;
+    border-radius: 10px;
   }
   .Project {
     height: 100vh;
@@ -135,7 +135,7 @@ body {
     grid-template-rows: 1fr 3fr;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 45vw;
     place-items: center;
   }
@@ -178,7 +178,7 @@ body {
     grid-template-rows: auto;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 80vw;
     place-items: center;
   }
@@ -224,7 +224,7 @@ body {
     grid-template-rows: auto;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 80vw;
     place-items: center;
   }
@@ -264,7 +264,7 @@ body {
   .ContactMe .ContactGrid .AccountArea {
     background-color: #48CAE4;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
   }
@@ -293,7 +293,7 @@ body {
   .ContactMe .ContactGrid .SendMessage {
     background-color: #48CAE4;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
     margin-top: 2rem;
@@ -361,7 +361,7 @@ body {
     grid-area: tytle;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     margin-left: 2rem;
     margin-right: 2rem;
   }
@@ -392,7 +392,7 @@ body {
   .About .icons .Logo {
     width: 50px;
     margin-bottom: 5rem;
-    border-radius: 10%;
+    border-radius: 10px;
   }
   .About .Mypicture {
     grid-area: Mypicture;
@@ -427,7 +427,7 @@ body {
     grid-template-rows: 1fr 3.5fr;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 40vw;
     place-items: center;
   }
@@ -472,7 +472,7 @@ body {
     grid-template-rows: 0.5fr 3fr 7fr;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 40vw;
     min-height: 60vh;
     place-items: center;
@@ -519,7 +519,7 @@ body {
     grid-template-rows: auto;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 80vw;
     place-items: center;
   }
@@ -562,12 +562,12 @@ body {
     padding: 2rem 0;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
   }
   .ContactMe .ContactGrid .AccountArea {
     background-color: #48CAE4;
     box-shadow: 5px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
   }
@@ -596,7 +596,7 @@ body {
   .ContactMe .ContactGrid .SendMessage {
     background-color: #48CAE4;
     box-shadow: 5px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
     display: flex;
@@ -662,7 +662,7 @@ body {
     margin-bottom: 0;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     margin-left: 1rem;
   }
   .About .tytle .Intro {
@@ -694,7 +694,7 @@ body {
   .About .icons .Logo {
     max-width: 40%;
     margin-bottom: 3rem;
-    border-radius: 15%;
+    border-radius: 10px;
     place-self: start center;
   }
   .About .Mypicture {
@@ -724,7 +724,7 @@ body {
     grid-template-rows: 1fr 4fr;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 28vw;
     max-width: 450px;
     margin-top: 2rem;
@@ -771,7 +771,7 @@ body {
     grid-template-rows: 0.5fr 3fr 7fr;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 25vw;
     min-height: 60vh;
     place-items: center;
@@ -815,7 +815,7 @@ body {
     grid-template-rows: 0.5fr 3fr 7fr;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     width: 35vw;
     min-height: 60vh;
     margin-top: 2rem;
@@ -856,13 +856,13 @@ body {
     padding: 2rem 2rem;
     background-color: #00B4D8;
     box-shadow: 10px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     max-width: 100%;
   }
   .ContactMe .ContactGrid .AccountArea {
     background-color: #48CAE4;
     box-shadow: 5px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
   }
@@ -891,7 +891,7 @@ body {
   .ContactMe .ContactGrid .SendMessage {
     background-color: #48CAE4;
     box-shadow: 5px 5px 5px #0077b6;
-    border-radius: 5%;
+    border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
     display: flex;
