--- a/src/css/index.css
+++ b/src/css/index.css
@@ -75,7 +75,7 @@ body {
     margin-bottom: 0;
     align-self: start;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
+    box-shadow: 10px 5px 5px #75d7ea;
     border-radius: 20px;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
@@ -143,10 +143,16 @@ body {
     display: grid;
     grid-template-rows: 1fr 3fr;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
     border-radius: 20px;
     width: 45vw;
     place-items: center;
+  }
+  .Project .ProjectGrid .POutline:hover {
+    transition: 0.4s;
+    box-shadow: 10px 5px 5px #0077b6;
+  }
+  .Project .ProjectGrid .POutline:active {
+    box-shadow: inset 5px 5px #0077b6;
   }
   .Project .ProjectGrid .POutline h2 {
     margin: 1vh 0;
@@ -186,7 +192,7 @@ body {
     display: grid;
     grid-template-rows: auto;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
+    box-shadow: 10px 5px 5px #75d7ea;
     border-radius: 20px;
     width: 80vw;
     place-items: center;
@@ -232,10 +238,16 @@ body {
     display: grid;
     grid-template-rows: auto;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
     border-radius: 20px;
     width: 80vw;
     place-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline:hover {
+    transition: 0.4s;
+    box-shadow: 10px 5px 5px #0077b6;
+  }
+  .WorkExperience .WorkGrid .Outline:active {
+    box-shadow: inset 5px 5px #0077b6;
   }
   .WorkExperience .WorkGrid .Outline h2 {
     margin-top: 0.5rem;
@@ -369,7 +381,7 @@ body {
   .About .tytle {
     grid-area: tytle;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
+    box-shadow: 10px 5px 5px #75d7ea;
     border-radius: 20px;
     margin-left: 2rem;
     margin-right: 2rem;
@@ -442,10 +454,16 @@ body {
     display: grid;
     grid-template-rows: 1fr 3.5fr;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
     border-radius: 20px;
     width: 40vw;
     place-items: center;
+  }
+  .Project .ProjectGrid .POutline:hover {
+    transition: 0.4s;
+    box-shadow: 10px 5px 5px #0077b6;
+  }
+  .Project .ProjectGrid .POutline:active {
+    box-shadow: inset 5px 5px #0077b6;
   }
   .Project .ProjectGrid .POutline h2 {
     margin: 0.3vh 0;
@@ -487,7 +505,7 @@ body {
     display: grid;
     grid-template-rows: 0.5fr 3fr 7fr;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
+    box-shadow: 10px 5px 5px #75d7ea;
     border-radius: 20px;
     width: 40vw;
     min-height: 60vh;
@@ -534,10 +552,16 @@ body {
     display: grid;
     grid-template-rows: auto;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
     border-radius: 20px;
     width: 80vw;
     place-items: center;
+  }
+  .WorkExperience .WorkGrid .Outline:hover {
+    transition: 0.4s;
+    box-shadow: 10px 5px 5px #0077b6;
+  }
+  .WorkExperience .WorkGrid .Outline:active {
+    box-shadow: inset 5px 5px #0077b6;
   }
   .WorkExperience .WorkGrid .Outline h2 {
     margin-top: 0.5rem;
@@ -677,7 +701,7 @@ body {
     grid-area: tytle;
     margin-bottom: 0;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
+    box-shadow: 10px 5px 5px #75d7ea;
     border-radius: 20px;
     margin-left: 1rem;
   }
@@ -745,12 +769,18 @@ body {
     display: grid;
     grid-template-rows: 1fr 4fr;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
     border-radius: 20px;
     width: 28vw;
     max-width: 450px;
     margin-top: 2rem;
     place-items: center;
+  }
+  .Project .ProjectGrid .POutline:hover {
+    transition: 0.4s;
+    box-shadow: 10px 5px 5px #0077b6;
+  }
+  .Project .ProjectGrid .POutline:active {
+    box-shadow: inset 5px 5px #0077b6;
   }
   .Project .ProjectGrid .POutline h2 {
     margin: 1vh 0;
@@ -792,7 +822,7 @@ body {
     display: grid;
     grid-template-rows: 0.5fr 3fr 7fr;
     background-color: #00B4D8;
-    box-shadow: 10px 5px 5px #0077b6;
+    box-shadow: 10px 5px 5px #75d7ea;
     border-radius: 20px;
     width: 25vw;
     min-height: 60vh;
@@ -842,8 +872,12 @@ body {
     margin-top: 2rem;
     place-items: center;
   }
-  .WorkExperience .WorkGrid .Outline :hover {
+  .WorkExperience .WorkGrid .Outline:hover {
+    transition: 0.4s;
     box-shadow: 10px 5px 5px #0077b6;
+  }
+  .WorkExperience .WorkGrid .Outline:active {
+    box-shadow: inset 5px 5px #0077b6;
   }
   .WorkExperience .WorkGrid .Outline h2 {
     margin: 0.5rem;
