--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -32,6 +32,7 @@ body{
   background-image: linear-gradient(to right top, #0077b6, #1c8bc2, #369fcd, #50b2d7, #6bc6e1, #7dd0e6, #8fdaeb, #a0e4f1, #abe7f3, #b6eaf5, #c0edf6, #caf0f8);
 }
 
+//Phone
 @media only screen and (max-width:425px){
   html{
     scroll-padding-top: 4rem;
@@ -85,7 +86,7 @@ body{
       margin-bottom: 0;
       align-self: start;
       background-color: #00B4D8;
-      box-shadow: 10px 5px 5px #0077b6;      
+      box-shadow: 10px 5px 5px #75d7ea;      
       border-radius: 20px;
       @include MarginLR(1.5rem);
       .Intro{
@@ -151,10 +152,16 @@ body{
         display: grid;
         grid-template-rows: 1fr 3fr;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
         border-radius: 20px;
         width: 45vw;
         place-items: center;
+        &:hover{
+          transition: 0.4s;
+          box-shadow: 10px 5px 5px #0077b6;
+        }
+        &:active{
+          box-shadow: inset 5px 5px #0077b6;
+        }
         h2{
           margin: 1vh 0;
         }
@@ -195,7 +202,7 @@ body{
         display: grid;
         grid-template-rows: auto;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
+        box-shadow: 10px 5px 5px #75d7ea;      
         border-radius: 20px;
         width: 80vw;
         place-items: center;
@@ -242,10 +249,16 @@ body{
         display: grid;
         grid-template-rows: auto;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
         border-radius: 20px;
         width: 80vw;
         place-items: center;
+        &:hover{
+          transition: 0.4s;
+          box-shadow: 10px 5px 5px #0077b6;
+        }
+        &:active{
+          box-shadow: inset 5px 5px #0077b6;
+        }
         h2{
           margin-top: 0.5rem;
           margin-bottom: 0;
@@ -326,6 +339,7 @@ body{
   }
 }
 
+//Tablet
 @media only screen and (min-width:426px) and (max-width:768px){
   html{
     scroll-padding-top: 7rem;
@@ -385,7 +399,7 @@ body{
     .tytle{
       grid-area: tytle;
       background-color: #00B4D8;
-      box-shadow: 10px 5px 5px #0077b6;      
+      box-shadow: 10px 5px 5px #75d7ea;      
       border-radius: 20px;
       @include MarginLR(2rem);
       .Intro{
@@ -454,10 +468,16 @@ body{
         display: grid;
         grid-template-rows: 1fr 3.5fr;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
         border-radius: 20px;
         width: 40vw;
         place-items: center;
+        &:hover{
+          transition: 0.4s;
+          box-shadow: 10px 5px 5px #0077b6;
+        }
+        &:active{
+          box-shadow: inset 5px 5px #0077b6;
+        }
         h2{
           margin: 0.3vh 0;
         }
@@ -500,7 +520,7 @@ body{
         display: grid;
         grid-template-rows: 0.5fr 3fr 7fr;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
+        box-shadow: 10px 5px 5px #75d7ea;      
         border-radius: 20px;
         width: 40vw;
         min-height: 60vh;
@@ -548,10 +568,16 @@ body{
         display: grid;
         grid-template-rows: auto;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
         border-radius: 20px;
         width: 80vw;
         place-items: center;
+        &:hover{
+          transition: 0.4s;
+          box-shadow: 10px 5px 5px #0077b6;
+        }
+        &:active{
+          box-shadow: inset 5px 5px #0077b6;
+        }
         h2{
           margin-top: 0.5rem;
           margin-bottom: 0;
@@ -638,6 +664,7 @@ body{
   }
 }
 
+//PC
 @media only screen and (min-width:769px){
   html{
     scroll-padding-top: 4rem;
@@ -695,7 +722,7 @@ body{
       grid-area: tytle;
       margin-bottom: 0;
       background-color: #00B4D8;
-      box-shadow: 10px 5px 5px #0077b6;      
+      box-shadow: 10px 5px 5px #75d7ea;      
       border-radius: 20px;
       margin-left: 1rem;
       .Intro{
@@ -761,12 +788,18 @@ body{
         display: grid;
         grid-template-rows: 1fr 4fr;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
         border-radius: 20px;
         width: 28vw;
         max-width: 450px;
         margin-top: 2rem;
         place-items: center;
+        &:hover{
+          transition: 0.4s;
+          box-shadow: 10px 5px 5px #0077b6;
+        }
+        &:active{
+          box-shadow: inset 5px 5px #0077b6;
+        }
         h2{
           margin: 1vh 0;
         }
@@ -809,7 +842,7 @@ body{
         display: grid;
         grid-template-rows: 0.5fr 3fr 7fr;
         background-color: #00B4D8;
-        box-shadow: 10px 5px 5px #0077b6;
+        box-shadow: 10px 5px 5px #75d7ea; 
         border-radius: 20px;
         width: 25vw;
         min-height: 60vh;
@@ -859,8 +892,12 @@ body{
         min-height: 60vh;
         margin-top: 2rem;
         place-items: center;
-        :hover{
+        &:hover{
+          transition: 0.4s;
           box-shadow: 10px 5px 5px #0077b6;
+        }
+        &:active{
+          box-shadow: inset 5px 5px #0077b6;
         }
           h2{
           margin: 0.5rem;
