--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,15 +15,11 @@ html{
 a{
   color: blue;
   font-weight: bold;
-}
-a:hover{
-  background-size: contain;
-  color: blue;
+  text-decoration: none;
 }
 a:visited{
   color: rgb(221, 96, 96);
 }
-
 
 body{
   padding: 0;
@@ -66,9 +62,20 @@ body{
       height: 14vh;
       flex-wrap: wrap;
       border-bottom: solid 1px rgb(60, 24, 156);
+      a:hover{
+        background-size: contain;
+        color: blue;
+        transform: scale(1.1);
+        p{
+          display: flex;
+          align-items: end;
+          height: 20%;
+          background-color: #6bc6e1;
+          margin-right: 1rem;
+        }
+      }
       p{
         margin-left: 2rem;
-        text-decoration: underline;
       }
     }
   }
@@ -367,10 +374,23 @@ body{
     }
     nav{
       border-bottom: 0.5px solid rgb(60, 24, 156);
-
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+      justify-items: center;
+      column-gap: 0.5rem;
+      a:hover{
+        background-size: contain;
+        color: blue;
+        transform: scale(1.1);
+        p{
+          display: flex;
+          align-items: end;
+          height: 20%;
+          background-color: #6bc6e1;
+          margin-right: 1rem;
+        }
+      }
       p{
-        display: inline-block;
-        text-decoration: underline;
         margin-right: 0.1rem;
         margin-left: 0.5rem;
       }
@@ -693,9 +713,20 @@ body{
     nav{
       display: flex;
       justify-content: flex-end;
-    p{
+      a:hover{
+        background-size: contain;
+        color: blue;
+        transform: scale(1.1);
+        p{
+          display: flex;
+          align-items: end;
+          height: 20%;
+          background-color: #6bc6e1;
+          margin-right: 1rem;
+        }
+      }
+      p{
         margin-right: 1.5rem;
-        text-decoration: underline;
       }
     }
   }
@@ -1000,3 +1031,10 @@ body{
   }
 }
 
+.ContactMe{
+  .Account{
+    p{
+      font-weight: normal;
+    }
+  }
+}
