--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,19 @@ a:visited {
   color: rgb(221, 96, 96);
 }
 
+.submit:active {
+  transform: translate(0, 2px);
+}
+
+.BoxSize {
+  caret-color: transparent;
+}
+
+.InputFocusColor {
+  border: white 2px solid !important;
+  outline: transparent;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -320,15 +333,50 @@ body {
   }
   .ContactMe .ContactGrid .SendMessage {
     background-color: #48CAE4;
-    box-shadow: 10px 5px 5px #0077b6;
+    box-shadow: 5px 5px 5px #0077b6;
     border-radius: 20px;
-    padding-top: 1rem;
+    padding-top: 0.2rem;
     padding-bottom: 1.5rem;
     margin-top: 2rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .inputBackground {
+    background-color: #00B4D8;
+    box-shadow: inset 5px 5px 5px #0077b6;
+    padding: 0.3rem;
+    border-radius: 5px;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .submitBackground {
+    background-color: #48CAE4;
+    box-shadow: 5px 5px 5px #0077b6;
+    border-radius: 5px;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .BoxSize {
+    width: 90%;
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .MessageBox {
+    width: 90%;
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .submit {
+    width: 90%;
+    box-sizing: border-box;
+    height: 30px;
+    border: 1px solid rgb(60, 24, 156);
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .PC {
+    display: none;
   }
 }
 @media only screen and (min-width: 426px) and (max-width: 768px) {
@@ -660,10 +708,46 @@ body {
     border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .inputBackground {
+    background-color: #00B4D8;
+    box-shadow: inset 5px 5px 5px #0077b6;
+    padding: 0.3rem;
+    border-radius: 5px;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .submitBackground {
+    background-color: #48CAE4;
+    box-shadow: 5px 5px 5px #0077b6;
+    border-radius: 5px;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .BoxSize {
+    width: 90%;
+    height: 40px;
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .MessageBox {
+    width: 90%;
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .submit {
+    width: 90%;
+    box-sizing: border-box;
+    height: 40px;
+    border: 1px solid rgb(60, 24, 156);
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .Phone {
+    display: none;
   }
 }
 @media only screen and (min-width: 769px) {
@@ -987,10 +1071,46 @@ body {
     border-radius: 20px;
     padding-top: 1rem;
     padding-bottom: 1.5rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .inputBackground {
+    background-color: #00B4D8;
+    box-shadow: inset 5px 5px 5px #0077b6;
+    padding: 0.3rem;
+    border-radius: 5px;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .submitBackground {
+    background-color: #48CAE4;
+    box-shadow: 5px 5px 5px #0077b6;
+    border-radius: 5px;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .BoxSize {
+    width: 90%;
+    height: 40px;
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .MessageBox {
+    width: 90%;
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 1rem;
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .submit {
+    width: 90%;
+    box-sizing: border-box;
+    height: 40px;
+    border: 1px solid rgb(60, 24, 156);
+  }
+  .ContactMe .ContactGrid .SendMessage #Form .Phone {
+    display: none;
   }
 }
 .Footer .title {
